# VertPlan

./: CMakeLists.txt  CornerInterface.cpp  CornerInterface.h  Grid.cpp  Grid.h  GridInterface.cpp  GridInterface.h  InputTextBox.cpp  InputTextBox.h  README.md  main.cpp  translator.cpp  translator.h
GridAssets/: Cells.cpp  Cells.h  CornerInterface.cpp  CornerInterface.h  Corners.cpp  Corners.h  Grid.cpp  Grid.h  GridInterface.cpp  GridInterface.h  InputTextBox.cpp  InputTextBox.h  Signs.cpp  Signs.h  translator.cpp  translator.h
UIBodies/: CameraBody.cpp  CameraBody.h  DrawingBody.cpp  DrawingBody.h  GraphDrawingBody.cpp  GraphDrawingBody.h  RectShapeBody.cpp  RectShapeBody.h  UIElementBody.cpp  UIElementBody.h
UIElements/: UIConstructor.cpp  UIConstructor.h  UIElement.cpp  UIElement.h
UIEvents/: ButtonEvent.cpp  ButtonEvent.h  DefaultEvent.cpp  DefaultEvent.h  GraphNavEvent.cpp  GraphNavEvent.h  InputTextBoxEvent.cpp  InputTextBoxEvent.h  UIEvent.cpp  UIEvent.h
